@@ -13,7 +13,6 @@ import java.net.UnknownHostException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -40,10 +39,12 @@ import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.yamcs.Spec.OptionType;
+import org.yamcs.commanding.PreparedCommand;
 import org.yamcs.logging.ConsoleFormatter;
 import org.yamcs.logging.Log;
 import org.yamcs.logging.YamcsLogManager;
 import org.yamcs.management.ManagementService;
+import org.yamcs.mdb.XtceDbFactory;
 import org.yamcs.protobuf.YamcsInstance.InstanceState;
 import org.yamcs.security.CryptoUtils;
 import org.yamcs.security.SecurityStore;
@@ -53,21 +54,21 @@ import org.yamcs.templating.Variable;
 import org.yamcs.time.RealtimeTimeService;
 import org.yamcs.time.TimeService;
 import org.yamcs.utils.ExceptionUtil;
+import org.yamcs.utils.SDNotify;
 import org.yamcs.utils.TimeEncoding;
 import org.yamcs.utils.YObjectLoader;
-import org.yamcs.xtceproc.XtceDbFactory;
 import org.yamcs.yarch.YarchDatabase;
 import org.yamcs.yarch.rocksdb.RDBFactory;
 import org.yamcs.yarch.rocksdb.RdbStorageEngine;
 import org.yaml.snakeyaml.Yaml;
 
 import com.beust.jcommander.JCommander;
-import com.beust.jcommander.Parameter;
 import com.beust.jcommander.ParameterException;
-import com.beust.jcommander.converters.PathConverter;
 import com.google.common.util.concurrent.Service.State;
 import com.google.common.util.concurrent.ThreadFactoryBuilder;
 import com.google.common.util.concurrent.UncheckedExecutionException;
+
+import io.netty.util.ResourceLeakDetector;
 
 /**
  *
@@ -106,33 +107,7 @@ public class YamcsServer {
 
     private CrashHandler globalCrashHandler;
 
-    @Parameter(names = { "-v", "--version" }, description = "Print version information and quit")
-    private boolean version;
-
-    @Parameter(names = "--check", description = "Run syntax tests on configuration files and quit")
-    private boolean check;
-
-    @Parameter(names = "--log", description = "Level of verbosity")
-    private int verbose = 2;
-
-    @Parameter(names = "--log-config", description = "File with log configuration", converter = PathConverter.class)
-    private Path logConfig;
-
-    @Parameter(names = "--etc-dir", description = "Path to config directory", converter = PathConverter.class)
-    private Path configDirectory = Paths.get("etc").toAbsolutePath();
-
-    @Parameter(names = "--data-dir", description = "Path to data directory", converter = PathConverter.class)
-    private Path dataDir;
-
-    @Parameter(names = "--no-stream-redirect", description = "Do not redirect stdout/stderr to the log system")
-    private boolean noStreamRedirect;
-
-    @Parameter(names = "--no-color", description = "Turn off console log colorization")
-    private boolean noColor;
-
-    @Parameter(names = { "-h", "--help" }, help = true, hidden = true)
-    private boolean help;
-
+    private YamcsServerOptions options = new YamcsServerOptions();
     private YConfiguration config;
     private Spec spec;
     private Map<ConfigScope, Map<String, Spec>> sectionSpecs = new HashMap<>();
@@ -152,8 +127,10 @@ public class YamcsServer {
     int maxOnlineInstances = 1000;
     int maxNumInstances = 20;
     Path incomingDir;
-    Path cacheDir;
     Path instanceDefDir;
+
+    // Set when the shutdown hook triggers
+    private boolean shuttingDown = false;
 
     /**
      * Creates services at global (if instance is null) or instance level. The services are not yet initialized. This
@@ -267,20 +244,24 @@ public class YamcsServer {
 
     public void shutDown() {
         long t0 = System.nanoTime();
-        LOG.debug("Yamcs is shutting down");
+        LOG.info("Yamcs is shutting down");
+        if (SDNotify.isSupported()) {
+            SDNotify.sendStoppingNotification();
+        }
         for (YamcsServerInstance ys : instances.values()) {
             ys.stopAsync();
         }
         for (YamcsServerInstance ys : instances.values()) {
             LOG.debug("Awaiting termination of instance {}", ys.getName());
             ys.awaitOffline();
+            LOG.info("Stopped instance '{}'", ys.getName());
         }
         if (globalServiceList != null) {
             for (ServiceWithConfig swc : globalServiceList) {
                 swc.getService().stopAsync();
             }
             for (ServiceWithConfig swc : globalServiceList) {
-                LOG.debug("Awaiting termination of service {}", swc.getName());
+                LOG.info("Awaiting termination of service {}", swc.getName());
                 swc.getService().awaitTerminated();
             }
         }
@@ -288,8 +269,9 @@ public class YamcsServer {
         RdbStorageEngine.getInstance().shutdown();
 
         long stopTime = System.nanoTime() - t0;
-        LOG.debug("Yamcs stopped in {}ms", NANOSECONDS.toMillis(stopTime));
+        LOG.info("Yamcs stopped in {}ms", NANOSECONDS.toMillis(stopTime));
         YamcsLogManager.shutdown();
+        timer.shutdown();
     }
 
     public static boolean hasInstance(String instance) {
@@ -333,7 +315,11 @@ public class YamcsServer {
         CommandOption previous = commandOptions.putIfAbsent(option.getId(), option);
         if (previous != null) {
             throw new IllegalArgumentException(
-                    "A command option with '" + option.getId() + "' was already registered with Yamcs");
+                    "A command option '" + option.getId() + "' was already registered with Yamcs");
+        }
+        if (PreparedCommand.isReservedColumn(option.getId())) {
+            throw new IllegalArgumentException(
+                    "Command options may not be named '" + option.getId() + "'. This name is reserved");
         }
     }
 
@@ -730,6 +716,9 @@ public class YamcsServer {
         return instanceTemplates.get(name);
     }
 
+    /**
+     * Returns the time service for a given instance
+     */
     public static TimeService getTimeService(String yamcsInstance) {
         if (YAMCS.instances.containsKey(yamcsInstance)) {
             return YAMCS.instances.get(yamcsInstance).getTimeService();
@@ -765,6 +754,26 @@ public class YamcsServer {
         return null;
     }
 
+    /**
+     * Returns the service matching the specified class.
+     * <p>
+     * This method requires that there be only one matching service, else it will throw an exception.
+     * 
+     * @return The matching singleton service, else {@code null}.
+     * @throws IllegalStateException
+     *             There is more than one matching service.
+     */
+    public <T extends YamcsService> T getService(String yamcsInstance, Class<T> serviceClass) {
+        List<T> services = getServices(yamcsInstance, serviceClass);
+        if (services.size() == 1) {
+            return services.get(0);
+        } else if (services.size() > 2) {
+            throw new IllegalStateException(serviceClass.getName() + " is not a singleton service");
+        } else {
+            return null;
+        }
+    }
+
     public <T extends YamcsService> List<T> getServices(String yamcsInstance, Class<T> serviceClass) {
         YamcsServerInstance ys = getInstance(yamcsInstance);
         if (ys == null) {
@@ -780,6 +789,26 @@ public class YamcsServer {
     public YamcsService getGlobalService(String serviceName) {
         ServiceWithConfig serviceWithConfig = getGlobalServiceWithConfig(serviceName);
         return serviceWithConfig != null ? serviceWithConfig.getService() : null;
+    }
+
+    /**
+     * Returns the global service matching the specified class.
+     * <p>
+     * This method requires that there be only one matching service, else it will throw an exception.
+     * 
+     * @return The matching singleton service, else {@code null}.
+     * @throws IllegalStateException
+     *             There is more than one matching service.
+     */
+    public <T extends YamcsService> T getGlobalService(Class<T> serviceClass) {
+        List<T> services = getGlobalServices(serviceClass);
+        if (services.size() == 1) {
+            return services.get(0);
+        } else if (services.size() > 2) {
+            throw new IllegalStateException(serviceClass.getName() + " is not a singleton service");
+        } else {
+            return null;
+        }
     }
 
     @SuppressWarnings("unchecked")
@@ -877,11 +906,11 @@ public class YamcsServer {
     }
 
     public Path getConfigDirectory() {
-        return configDirectory;
+        return options.configDirectory;
     }
 
     public Path getDataDirectory() {
-        return dataDir;
+        return options.dataDir;
     }
 
     public Path getIncomingDirectory() {
@@ -889,7 +918,7 @@ public class YamcsServer {
     }
 
     public Path getCacheDirectory() {
-        return cacheDir;
+        return options.cacheDir;
     }
 
     /**
@@ -915,15 +944,17 @@ public class YamcsServer {
         parseArgs(args);
 
         System.setProperty("jxl.nowarnings", "true");
-        System.setProperty("jacorb.home", System.getProperty("user.dir"));
-        System.setProperty("javax.net.ssl.trustStore", YAMCS.configDirectory.resolve("trustStore").toString());
+        if (System.getProperty("javax.net.ssl.trustStore") == null) {
+            System.setProperty("javax.net.ssl.trustStore",
+                    YAMCS.options.configDirectory.resolve("trustStore").toString());
+        }
 
         try {
             setupLogging();
 
             // Bootstrap YConfiguration such that it only considers physical files.
             // Not classpath resources.
-            YConfiguration.setResolver(new FileBasedConfigurationResolver(YAMCS.configDirectory));
+            YConfiguration.setResolver(new FileBasedConfigurationResolver(YAMCS.options.configDirectory));
 
             YAMCS.prepareStart();
         } catch (Exception e) {
@@ -931,7 +962,7 @@ public class YamcsServer {
             if (t instanceof ValidationException) {
                 String path = ((ValidationException) t).getContext().getPath();
                 LOG.error("{}: {}", path, e.getMessage());
-                if (YAMCS.check) {
+                if (YAMCS.options.check) {
                     System.out.println("Configuration Invalid");
                 }
                 YamcsLogManager.shutdown();
@@ -943,33 +974,37 @@ public class YamcsServer {
             }
         }
 
-        if (YAMCS.check) {
+        if (YAMCS.options.check) {
             System.out.println("Configuration OK");
             System.exit(0);
         }
 
+        ResourceLeakDetector.setLevel(YAMCS.options.nettyLeakDetection);
+        if (ResourceLeakDetector.isEnabled()) {
+            LOG.info("Netty leak detection: " + ResourceLeakDetector.getLevel());
+        }
+
         // Good to go!
         try {
-            LOG.info("yamcs {}, build {}", YamcsVersion.VERSION, YamcsVersion.REVISION.substring(0, 8));
+            LOG.info("Yamcs {}, build {}", YamcsVersion.VERSION, YamcsVersion.REVISION);
             YAMCS.start();
+            YAMCS.reportReady(System.nanoTime() - t0);
         } catch (Exception e) {
             LOG.error("Could not start Yamcs", ExceptionUtil.unwind(e));
             System.exit(-1);
         }
-
-        YAMCS.reportReady(System.nanoTime() - t0);
     }
 
     private static void parseArgs(String[] args) {
         try {
-            JCommander jcommander = new JCommander(YAMCS);
+            JCommander jcommander = new JCommander(YAMCS.options);
             jcommander.setProgramName("yamcsd");
             jcommander.parse(args);
-            if (YAMCS.help) {
+            if (YAMCS.options.help) {
                 jcommander.usage();
                 System.exit(0);
-            } else if (YAMCS.version) {
-                System.out.println("yamcs " + YamcsVersion.VERSION + ", build " + YamcsVersion.REVISION);
+            } else if (YAMCS.options.version) {
+                System.out.println("Yamcs " + YamcsVersion.VERSION + ", build " + YamcsVersion.REVISION);
                 PluginManager pluginManager = new PluginManager();
                 for (Plugin plugin : ServiceLoader.load(Plugin.class)) {
                     PluginMetadata meta = pluginManager.getMetadata(plugin.getClass());
@@ -984,7 +1019,7 @@ public class YamcsServer {
     }
 
     private static void setupLogging() throws SecurityException, IOException {
-        if (YAMCS.check) {
+        if (YAMCS.options.check) {
             Log.forceStandardStreams(Level.WARNING);
             return;
         }
@@ -992,7 +1027,7 @@ public class YamcsServer {
         if (System.getProperty("java.util.logging.config.file") != null) {
             LOG.info("Logging configuration overriden via java property");
         } else {
-            Path configFile = YAMCS.configDirectory.resolve("logging.properties").toAbsolutePath();
+            Path configFile = YAMCS.options.configDirectory.resolve("logging.properties").toAbsolutePath();
             if (Files.exists(configFile)) {
                 try (InputStream in = Files.newInputStream(configFile)) {
                     YamcsLogManager.setup(in);
@@ -1010,7 +1045,7 @@ public class YamcsServer {
         System.setOut(new PrintStream(System.out) {
             @Override
             public void println(String x) {
-                if (YAMCS.noStreamRedirect) {
+                if (YAMCS.options.noStreamRedirect) {
                     super.println(x);
                 } else {
                     stdoutLogger.info(x);
@@ -1019,7 +1054,7 @@ public class YamcsServer {
 
             @Override
             public void println(Object x) {
-                if (YAMCS.noStreamRedirect) {
+                if (YAMCS.options.noStreamRedirect) {
                     super.println(x);
                 } else {
                     stdoutLogger.info(String.valueOf(x));
@@ -1030,7 +1065,7 @@ public class YamcsServer {
         System.setErr(new PrintStream(System.err) {
             @Override
             public void println(String x) {
-                if (YAMCS.noStreamRedirect) {
+                if (YAMCS.options.noStreamRedirect) {
                     super.println(x);
                 } else {
                     stderrLogger.severe(x);
@@ -1039,7 +1074,7 @@ public class YamcsServer {
 
             @Override
             public void println(Object x) {
-                if (YAMCS.noStreamRedirect) {
+                if (YAMCS.options.noStreamRedirect) {
                     super.println(x);
                 } else {
                     stdoutLogger.info(String.valueOf(x));
@@ -1049,7 +1084,7 @@ public class YamcsServer {
     }
 
     private static void setupDefaultLogging() throws SecurityException, IOException {
-        Level logLevel = toLevel(YAMCS.verbose);
+        Level logLevel = toLevel(YAMCS.options.verbose);
 
         // Not sure. This seems to be the best programmatic way. Changing Logger
         // instances directly only works on the weak instance.
@@ -1060,8 +1095,8 @@ public class YamcsServer {
         buf.append(defaultHandler).append(".level=").append(logLevel).append("\n");
         buf.append(defaultHandler).append(".formatter=").append(defaultFormatter).append("\n");
 
-        if (YAMCS.logConfig != null) {
-            try (InputStream in = Files.newInputStream(YAMCS.logConfig)) {
+        if (YAMCS.options.logConfig != null) {
+            try (InputStream in = Files.newInputStream(YAMCS.options.logConfig)) {
                 Properties props = new Properties();
                 props.load(in);
                 props.forEach((logger, verbosity) -> {
@@ -1079,8 +1114,8 @@ public class YamcsServer {
         }
         for (Handler handler : Logger.getLogger("").getHandlers()) {
             Formatter formatter = handler.getFormatter();
-            if (formatter != null && formatter instanceof ConsoleFormatter) {
-                ((ConsoleFormatter) formatter).setEnableAnsiColors(!YAMCS.noColor);
+            if (formatter instanceof ConsoleFormatter) {
+                ((ConsoleFormatter) formatter).setEnableAnsiColors(!YAMCS.options.noColor);
             }
         }
     }
@@ -1106,7 +1141,7 @@ public class YamcsServer {
 
         // Load the UTC-TAI.history file.
         // Give priority to a file in etc folder.
-        Path utcTaiFile = configDirectory.resolve("UTC-TAI.history");
+        Path utcTaiFile = options.configDirectory.resolve("UTC-TAI.history");
         if (Files.exists(utcTaiFile)) {
             try (InputStream in = Files.newInputStream(utcTaiFile)) {
                 TimeEncoding.setUp(in);
@@ -1136,6 +1171,8 @@ public class YamcsServer {
         Spec bucketSpec = new Spec();
         bucketSpec.addOption("name", OptionType.STRING).withRequired(true);
         bucketSpec.addOption("path", OptionType.STRING);
+        bucketSpec.addOption("maxSize", OptionType.INTEGER);
+        bucketSpec.addOption("maxObjects", OptionType.INTEGER);
 
         spec = new Spec();
         spec.addOption("services", OptionType.LIST).withElementType(OptionType.MAP)
@@ -1167,6 +1204,7 @@ public class YamcsServer {
         Runtime.getRuntime().addShutdownHook(new Thread() {
             @Override
             public void run() {
+                shuttingDown = true;
                 shutDown();
             }
         });
@@ -1182,8 +1220,15 @@ public class YamcsServer {
         });
     }
 
+    /**
+     * Returns true when Yamcs is shutting down.
+     */
+    public boolean isShuttingDown() {
+        return shuttingDown;
+    }
+
     private void discoverTemplates() throws IOException {
-        Path templatesDir = configDirectory.resolve("instance-templates");
+        Path templatesDir = options.configDirectory.resolve("instance-templates");
         if (!Files.exists(templatesDir)) {
             return;
         }
@@ -1198,18 +1243,10 @@ public class YamcsServer {
                         Template template = new Template(name, source);
 
                         Path metaFile = p.resolve("meta.yaml");
-                        Path varFile = p.resolve("variables.yaml");
                         Map<String, Object> metaDef = new HashMap<>();
                         if (Files.exists(metaFile)) {
                             try (InputStream in = Files.newInputStream(metaFile)) {
                                 metaDef = new Yaml().load(in);
-                            }
-                        } else if (Files.exists(varFile)) {
-                            LOG.warn("DEPRECATED: Templates should use meta.yaml instead of variables.yaml"
-                                    + " (move variables.yaml content under a 'variables' key in meta.yaml)");
-                            try (InputStream in = Files.newInputStream(varFile)) {
-                                List<Map<String, Object>> varDefs = new Yaml().load(in);
-                                metaDef.put("variables", varDefs);
                             }
                         }
 
@@ -1253,21 +1290,21 @@ public class YamcsServer {
         } else {
             globalCrashHandler = new LogCrashHandler();
         }
-        if (dataDir == null) {
-            dataDir = Paths.get(config.getString("dataDir"));
+        if (options.dataDir == null) {
+            options.dataDir = Path.of(config.getString("dataDir"));
         }
-        YarchDatabase.setHome(dataDir.toAbsolutePath().toString());
-        incomingDir = Paths.get(config.getString("incomingDir"));
-        instanceDefDir = dataDir.resolve("instance-def");
+        YarchDatabase.setHome(options.dataDir.toString());
+        incomingDir = Path.of(config.getString("incomingDir"));
+        instanceDefDir = options.dataDir.resolve("instance-def");
 
         if (YConfiguration.configDirectory != null) {
-            cacheDir = YConfiguration.configDirectory.getAbsoluteFile().toPath();
-        } else {
-            cacheDir = Paths.get(config.getString("cacheDir")).toAbsolutePath();
+            options.cacheDir = YConfiguration.configDirectory.toPath().toAbsolutePath();
+        } else if (options.cacheDir == null) {
+            options.cacheDir = Path.of(config.getString("cacheDir")).toAbsolutePath();
         }
-        Files.createDirectories(cacheDir);
+        Files.createDirectories(options.cacheDir);
 
-        Path globalDir = dataDir.resolve(GLOBAL_INSTANCE);
+        Path globalDir = options.dataDir.resolve(GLOBAL_INSTANCE);
         Files.createDirectories(globalDir);
         Files.createDirectories(instanceDefDir);
 
@@ -1279,6 +1316,7 @@ public class YamcsServer {
 
         try {
             securityStore = new SecurityStore();
+            LOG.debug("Security: " + (securityStore.isEnabled() ? "enabled" : "disabled"));
         } catch (InitException e) {
             if (e.getCause() instanceof ValidationException) {
                 throw (ValidationException) e.getCause();
@@ -1352,7 +1390,7 @@ public class YamcsServer {
         }
     }
 
-    private void reportReady(long bootTime) {
+    private void reportReady(long bootTime) throws IOException {
         int instanceCount = getOnlineInstanceCount();
         int serviceCount = globalServiceList.size() + getInstances().stream()
                 .map(instance -> instance.services != null ? instance.services.size() : 0)
@@ -1361,29 +1399,15 @@ public class YamcsServer {
         String msg = String.format("Yamcs started in %dms. Started %d of %d instances and %d services",
                 NANOSECONDS.toMillis(bootTime), instanceCount, instances.size(), serviceCount);
 
-        if (noStreamRedirect) {
-            // The init.d script uses this, by grepping for a known string
-            // Note that the init.d script cannot grep the real log file because it
-            // does not know its location.
+        if (options.noStreamRedirect) {
             System.out.println(msg);
         } else {
             // Associate the message with a specific logger
             LOG.info(msg);
         }
 
-        // If started through systemd with Type=notify, Yamcs will have NOTIFY_SOCKET
-        // env set.
-
-        // Normally we would use systemd-notify to report success, but it suffers from
-        // a race condition. See https://www.lukeshu.com/blog/x11-systemd.html
-        String notifySocket = System.getenv("NOTIFY_SOCKET");
-        if (notifySocket != null) {
-            try {
-                String cmd = String.format("echo 'READY=1' | socat STDIO UNIX-SENDTO:%s", notifySocket);
-                new ProcessBuilder("sh", "-c", cmd).inheritIO().start();
-            } catch (IOException e) {
-                throw new UncheckedIOException(e);
-            }
+        if (SDNotify.isSupported()) {
+            SDNotify.sendStartupNotification();
         }
 
         // Report start success to internal listeners
